--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -4,7 +4,7 @@
     capture_source: true
     enabled: true
     ignore_errors: ActionController::RoutingError
-  apdex_t: 0.5
+  apdex_t: 5
   ssl: false
   monitor_mode: true
   license_key: <%= ENV["NEW_RELIC_LICENSE_KEY"] %>
@@ -15,5 +15,5 @@
     enabled: true
     stack_trace_threshold: 0.5
     transaction_threshold: apdex_f
-  capture_params: false
-  log_level: info
+  capture_params: true
+  log_level: warn
